# Speech-Recognition-English

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run.py
flask_app/: __init__.py  routes.py
flask_app/services/: openai_service.py
flask_app/static/: app.js  style.css
flask_app/templates/: index.html  speech_recognition.html
instance/: config.py
