[project]
name = "flask_llm_project"
version = "0.1.0"
description = "Audio recognition + Flask + LLM on Colab"
readme = "README.md"
requires-python = "==3.13.2"
authors = [{name = "Kenta Hirahara"}]
dependencies = [
    "openai==1.55.3",
    "six",
    "httpx>=0.27.2",
    "langchain[openai]",
    "faiss-cpu",
    "tiktoken",
    "langchain-community",
    "langchain-openai",
    "flask",
    "python-dotenv",
    ]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.2",
]
